--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 .list{
-    font-weight: bold;
-    opacity: 0.7;
-    color: blue;
+            
 }
 .hmm{
     font-size: medium;
@@ -27,5 +25,21 @@ section > .force{
     color-interpolation-filters: linearRGB;
     color: aquamarine;
     background-color: antiquewhite;
-    opacity: 0.66;
+    opacity: 0.66;}
+nav li{
+    list-style: none;
+}
+a:link, a:visited{
+    text-decoration: none;
+    background-color: green;
+    border: 1px solid blue;
+    color: black;
+    display: block;
+    text-align: center;
+    width: 200px;
+    margin-bottom: 1px;
+}
+a:hover, a:active{
+    background-color: red;
+    color: purple;
 }
